# ECO

./: .gitignore  CMakeLists.txt  func_test.cpp  main.cpp  test_720p.cpp  vot100_test.cpp
include/: config.hpp  eco.h  type.hpp
include/feat_extra/: cnf.hpp  feature.hpp  fhog.h  sse.hpp
include/implements/: scale_filter.hpp  tracker.hpp  train.hpp
resource/: config.cfg
src/: config.cpp  eco.cpp
src/feat_extra/: cnf.cpp  fhog.cpp
src/implements/: scale_filter.cpp  tracker.cpp
